# SAMuel

./: Cargo.toml  README.md
.cargo/: config.toml
src/: fetch.rs  main.rs  steam.rs
