[package]
name = "samuel"
version = "0.1.0"
edition = "2024"

[dependencies]
steamworks = "0.11.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
